[package]
name = "github-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
dotenvy = "0.15.7"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
